- Project restart. Kotlin rewrite